doc: Added javascript dom code align with html,and css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="fruit-pic">
             <div class="fru-pic">
                 <img src="image/banana.png" id="banana">
-               
+
             </div>
             <div class="frui_text">
                 <h3 id="fruits">Fruits</h3>
@@ -42,18 +42,13 @@
             </div>
             <div class="frui-pics">
                 <img src="image/apples.png" id="apple">
-
-
-
-
-                <!-- <img src="image/aple.jpg" id=pinapple> -->
             </div>
 
 
         </div>
         <div class="vege-pic">
             <div class="#">
-                <img src="image/spinach.png" id="vegetable">
+                <img src="image/spinach.png" id="spinach">
             </div>
             <div class="text">
                 <h3>Vegetables</h3>
@@ -68,11 +63,12 @@
                 </ul>
 
             </div>
-            <div class="spinach">
-                <img src="image/tomato.jpeg"id=tomato>
+            <div class="tomato">
+                <img src="image/tomato.jpeg" id=tomato>
             </div>
         </div>
     </div>
+
     <script src="index.js"></script>
 
 </body>
